--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Contact - Twenty by HTML5 UP</title>
+		<title>Quote - Gelmu's Cleaning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,92 +16,64 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header" class="alt">
+				<h1 id="logo"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="index.html">Home</a></li>
+						<li class="submenu">
+							<a href="#">Menu</a>
+							<ul>
+								<li><a href="no-sidebar.html">Services</a></li>
+								<li><a href="no-sidebar.html">Coverage Area</a></li>
+								<li><a href="no-sidebar.html">Pricing</a></li>
+								<li><a href="no-sidebar.html">Reviews</a></li>
+								<li><a href="no-sidebar.html">Policies</a></li>
+								<li><a href="no-sidebar.html">About</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</li>
+						<li><a href="#" class="button primary">Request A Quote</a></li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Main -->
 				<article id="main">
 
 					<header class="special container">
 						<span class="icon solid fa-envelope"></span>
-						<h2>Get In Touch</h2>
-						<p>Use the form below to give /dev/null a piece of your mind.</p>
+						<h2>Quote Request</h2>
+						<p>Please submit the form below for us to get in touch with you!</p>
 					</header>
 
 					<!-- One -->
 						<section class="wrapper style4 special container medium">
 
 							<!-- Content -->
-								<div class="content">
-									<form>
-										<div class="row gtr-50">
-											<div class="col-6 col-12-mobile">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-mobile">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="7"></textarea>
-											</div>
-											<div class="col-12">
-												<ul class="buttons">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgch82UOO7b3KaahCGcJwgw3ZpGS186QplWcKwGGwbZxUW_Q/viewform?embedded=true" width="100%" height="2240" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 						</section>
 
 				</article>
 
 			<!-- Footer -->
-				<footer id="footer">
+			<footer id="footer">
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+				<ul class="icons">
+					<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
+					<li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
+				</ul>
 
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+				<ul class="copyright">
+					<li>&copy; All rights reserved, Gelmu's Cleaning 2024</li></li>
+				</ul>
 
-				</footer>
+				<ul class="copyright">
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Build: Suwanshree Acharya</a></li>
+				</ul>
+
+			</footer>
 
 		</div>
 
