--- a/index.html
+++ b/index.html
@@ -20,27 +20,20 @@
 					<h1 id="logo"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li class="current"><a href="#">Home</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+								<a href="#">Menu</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="no-sidebar.html">Services</a></li>
+									<li><a href="no-sidebar.html">Coverage Area</a></li>
+									<li><a href="no-sidebar.html">Pricing</a></li>
+									<li><a href="no-sidebar.html">Reviews</a></li>
+									<li><a href="no-sidebar.html">Policies</a></li>
+									<li><a href="no-sidebar.html">About</a></li>
 									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button primary">Request A Quote</a></li>
+							<li><a href="contact.html" class="button primary">Request A Quote</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -79,7 +72,7 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-chart-bar"></span>
+						<span class="icon solid fa-sun"></span>
 						<h2>For <strong>decades</strong>,  customers have praised and
 						<br />
 						remained loyal to Gelmu's Cleaning for their
@@ -172,7 +165,7 @@
 							</div>
 							<footer class="major">
 								<ul class="buttons">
-									<li><a href="#" class="button">Request A Quote</a></li>
+									<li><a href="contact.html" class="button">Request A Quote</a></li>
 								</ul>
 							</footer>
 
@@ -189,8 +182,8 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button primary">Recent Reviews</a></li>
-							<li><a href="#" class="button">Yelp Listing</a></li>
+							<li><a href="no-sidebar.html" class="button primary">Recent Reviews</a></li>
+							<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?override_cta=Get+pricing+%26+availability" class="button">Yelp Listing</a></li>
 						</ul>
 					</footer>
 
@@ -201,7 +194,7 @@
 
 					<ul class="icons">
 						<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
-						<li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 
 					<ul class="copyright">
