--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Twenty by HTML5 UP</title>
+		<title>About - Gelmu's Cleaning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,42 +16,35 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header" class="alt">
+				<h1 id="logo"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="index.html">Home</a></li>
+						<li class="submenu">
+							<a href="#">Menu</a>
+							<ul>
+								<li><a href="no-sidebar.html">Services</a></li>
+								<li><a href="no-sidebar.html">Coverage Area</a></li>
+								<li><a href="no-sidebar.html">Pricing</a></li>
+								<li><a href="no-sidebar.html">Reviews</a></li>
+								<li><a href="no-sidebar.html">Policies</a></li>
+								<li><a href="no-sidebar.html">About</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</li>
+						<li><a href="contact.html" class="button primary">Request A Quote</a></li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Main -->
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-mobile-alt"></span>
-						<h2>And finally there's <strong>No Sidebar</strong></h2>
-						<p>Where that in the center faces the nameless horrors alone.</p>
+						<span class="icon solid fa-hammer"></span>
+						<h2>Page Under <strong>Construction</strong></h2>
+						<p>We are hard at work to add content here. Please visit us soon!</p>
 					</header>
 
 					<!-- One -->
@@ -62,7 +55,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Dolore Amet Consequat</h3>
+											<h3>Heading</h3>
 										</header>
 										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
 										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
@@ -79,7 +72,7 @@
 
 									<section>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Topic #1</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 										<footer>
@@ -94,7 +87,7 @@
 
 									<section>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Topic #2</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 										<footer>
@@ -109,7 +102,7 @@
 
 									<section>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Topic #3</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 										<footer>
@@ -126,21 +119,22 @@
 				</article>
 
 			<!-- Footer -->
-				<footer id="footer">
+			<footer id="footer">
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+				<ul class="icons">
+					<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
+					<li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
+				</ul>
 
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+				<ul class="copyright">
+					<li>&copy; All rights reserved, Gelmu's Cleaning 2024</li></li>
+				</ul>
 
-				</footer>
+				<ul class="copyright">
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Build: Suwanshree Acharya</a></li>
+				</ul>
+
+			</footer>
 
 		</div>
 
