--- a/404.html
+++ b/404.html
@@ -1,110 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found</title>
-    <script>
-        // Redirect to index.html after 2 seconds
-        setTimeout(function () {
-            window.location.href = "/index.html";
-        }, 2000);
-    </script>
-</head>
-<body>
-    <h1>Page Not Found</h1>
-    <p>You will be redirected shortly...</p>
-    <footer id="footer">
-        <!-- Google Maps embedded -->
-        <h2><strong>Address:</strong> 11 St Marks Pl, New York, NY 10003</h2>
-        <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.478998573758!2d-73.99105260129012!3d40.729484455065524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2599b8870e65f%3A0x4e5f60dcca7872b5!2s11%20St%20Marks%20Pl%2C%20New%20York%2C%20NY%2010003!5e0!3m2!1sen!2sus!4v1732446926492!5m2!1sen!2sus"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
-        <!-- Contact -->
-        <section class="wrapper style1 container special">
-            <div class="row">
-                <div class="col-4 col-12-narrower">
-                    <section>
-                        <header>
-                            <h3><strong>We're on call 24/7</strong></h3>
-                        </header>
-                        <p id="overide-center">
-                            <a href="tel:+19176931708">(917) 693-1708</a>
-                        </p>
-                    </section>
-                </div>
-                <div class="col-4 col-12-narrower">
-                    <section>
-                        <header>
-                            <h3><strong>Hours of Operation</strong></h3>
-                        </header>
-                        <p id="overide-center">Mon-Fri 9:00 AM - 10:00 PM</p>
-                    </section>
-                </div>
-                <div class="col-4 col-12-narrower">
-                    <section>
-                        <header>
-                            <h3><strong>E-mail</strong></h3>
-                        </header>
-                        <p id="overide-center">
-                            <a href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
-                        </p>
-                    </section>
-                </div>
-            </div>
-            <hr>
-        </section>
-        <!-- Services -->
-         <div class="border-top-bot">
-            <h2><strong>Our Services</strong></h2>
+    <head>
+		<title>Gelmu's Cleaning</title>
+        <script>
+            // Redirect to index.html after 2 seconds
+            setTimeout(function () {
+                window.location.href = "/index.html";
+            }, 2000);
+        </script>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+
+    <!--Body-->
+	<body class="index is-preload">
+        <header class="special container">
+            <span class="icon solid fa-question-circle"></span>
+            <h2><strong>404:</strong> Page not found
+        </h2>
+            <p>Redirecting to Home page...</p>
+        </header>
+
+        <!--Footer-->
+        <footer id="footer">
+            <!-- Contact -->
             <section class="wrapper style1 container special">
                 <div class="row">
                     <div class="col-4 col-12-narrower">
-
                         <section>
-                            <p id="overide-center">Tile & Grout Cleaning</p>
-                            <p id="overide-center">Move In/Move Out Cleaning</p>
+                            <header>
+                                <h3><strong>We're on call 24/7</strong></h3>
+                            </header>
+                            <p id="overide-center">
+                                <a href="tel:+19176931708">(917) 693-1708</a>
+                            </p>
                         </section>
-
                     </div>
                     <div class="col-4 col-12-narrower">
-
                         <section>
-                            <p id="overide-center">Window Cleaning</p>
-                            <p id="overide-center">Deep Cleaning</p>
+                            <header>
+                                <h3><strong>Hours of Operation</strong></h3>
+                            </header>
+                            <p id="overide-center">Mon-Fri 9:00 AM - 10:00 PM</p>
                         </section>
-
                     </div>
                     <div class="col-4 col-12-narrower">
-
                         <section>
-                            <p id="overide-center">Eco/Green Cleaning</p>
-                            <p id="overide-center">Maid Services</p>
+                            <header>
+                                <h3><strong>E-mail</strong></h3>
+                            </header>
+                            <p id="overide-center">
+                                <a href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
+                            </p>
                         </section>
-
                     </div>
                 </div>
+                <hr>
             </section>
-        </div>
+            <!-- Services -->
+            <div class="border-top-bot">
+                <h2><strong>Our Services</strong></h2>
+                <section class="wrapper style1 container special">
+                    <div class="row">
+                        <div class="col-4 col-12-narrower">
 
-        <!-- Social -->
-        <ul class="icons">
-            <li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
-            <li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
-        </ul>
-        <!-- Copyright -->
-        <ul class="copyright">
-            <li>&copy; All rights reserved, Gelmu's Cleaning 2024</li></li>
-        </ul>
+                            <section>
+                                <p id="overide-center">Tile & Grout Cleaning</p>
+                                <p id="overide-center">Move In/Move Out Cleaning</p>
+                            </section>
 
-        <ul class="copyright">
-            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Build: Suwanshree Acharya</a></li>
-        </ul>
+                        </div>
+                        <div class="col-4 col-12-narrower">
 
-    </footer>
-</body>
+                            <section>
+                                <p id="overide-center">Window Cleaning</p>
+                                <p id="overide-center">Deep Cleaning</p>
+                            </section>
+
+                        </div>
+                        <div class="col-4 col-12-narrower">
+
+                            <section>
+                                <p id="overide-center">Eco/Green Cleaning</p>
+                                <p id="overide-center">Maid Services</p>
+                            </section>
+
+                        </div>
+                    </div>
+                </section>
+            </div>
+
+            <!-- Social -->
+            <ul class="icons">
+                <li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
+                <li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
+            </ul>
+            <!-- Copyright -->
+            <ul class="copyright">
+                <li>&copy; All rights reserved, Gelmu's Cleaning 2024</li></li>
+            </ul>
+
+            <ul class="copyright">
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Build: Suwanshree Acharya</a></li>
+            </ul>
+
+        </footer>
+    </body>
 </html>
