--- a/404.html
+++ b/404.html
@@ -16,6 +16,30 @@
 
     <!--Body-->
 	<body class="index is-preload">
+        <!-- Header -->
+				<header id="header" class="alt">
+					<h1 id="logo"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="#">Home</a></li>
+							<li class="submenu">
+								<a href="#">Menu</a>
+								<ul>
+									<li><a href="no-sidebar.html">Services</a></li>
+									<li><a href="no-sidebar.html">Coverage Area</a></li>
+									<li><a href="no-sidebar.html">Pricing</a></li>
+									<li><a href="no-sidebar.html">Reviews</a></li>
+									<li><a href="no-sidebar.html">Policies</a></li>
+									<li><a href="no-sidebar.html">About</a></li>
+									<li><a href="contact.html">Contact</a></li>
+								</ul>
+							</li>
+							<li><a href="contact.html" class="button primary">Request A Quote</a></li>
+						</ul>
+					</nav>
+				</header>
+
+        <!--Message-->
         <header class="special container">
             <span class="icon solid fa-question-circle"></span>
             <h2><strong>404:</strong> Page not found
