--- a/404.html
+++ b/404.html
@@ -57,8 +57,9 @@
                             <header>
                                 <h3><strong>We're on call 24/7</strong></h3>
                             </header>
-                            <p id="overide-center">
-                                <a href="tel:+19176931708">(917) 693-1708</a>
+                            <p id="overide-center" class="row aln-center">
+                                <span class="icon solid fa-phone"></span>
+                                <a class="no-border" href="tel:+19176931708">(917) 693-1708</a>
                             </p>
                         </section>
                     </div>
@@ -67,7 +68,10 @@
                             <header>
                                 <h3><strong>Hours of Operation</strong></h3>
                             </header>
-                            <p id="overide-center">Mon-Fri 9:00 AM - 10:00 PM</p>
+                            <div id="overide-center" class="row aln-center">
+                                <span class="icon solid fa-clock"></span>
+                                <p>Mon-Fri 9:00 AM - 10:00 PM</p>
+                            </div>
                         </section>
                     </div>
                     <div class="col-4 col-12-narrower">
@@ -75,8 +79,9 @@
                             <header>
                                 <h3><strong>E-mail</strong></h3>
                             </header>
-                            <p id="overide-center">
-                                <a href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
+                            <p id="overide-center" class="row aln-center">
+                                <span class="icon solid fa-envelope"></span>
+                                <a  class="no-border" href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
                             </p>
                         </section>
                     </div>
@@ -84,7 +89,7 @@
                 <hr>
             </section>
             <!-- Services -->
-            <div class="border-top-bot">
+             <div class="border-top-bot">
                 <h2><strong>Our Services</strong></h2>
                 <section class="wrapper style1 container special">
                     <div class="row">
@@ -118,8 +123,8 @@
 
             <!-- Social -->
             <ul class="icons">
-                <li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
-                <li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" target="_blank" rel="noopener noreferrer" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
+                <li><a href="https://www.facebook.com/Gelmu2" target="_blank" rel="noopener noreferrer" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
             </ul>
             <!-- Copyright -->
             <ul class="copyright">
@@ -127,7 +132,7 @@
             </ul>
 
             <ul class="copyright">
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Build: Suwanshree Acharya</a></li>
+                <li>Design: <a class="no-border" href="http://html5up.net" target="_blank" rel="noopener noreferrer">HTML5 UP</a></li><li>Build: <a class="no-border" href="http://suwanshree.com" target="_blank" rel="noopener noreferrer">Suwanshree Acharya</a></li>
             </ul>
 
         </footer>
