--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-sun"></span>
+						<span class="icon solid fa-comments"></span>
 						<h2>For <strong>decades</strong>,  customers have praised and
 						<br />
 						remained loyal to Gelmu's Cleaning for their
@@ -194,7 +194,10 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<!-- Google Maps embedded -->
-					<h2><strong>Address:</strong> 11 St Marks Pl, New York, NY 10003</h2>
+					<div class="row aln-center">
+						<span class="icon solid fa-map-marker"></span>
+						<h2><strong>Address:</strong> 11 St Marks Pl, New York, NY 10003</h2>
+					</div>
 					<div class="map-container">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.478998573758!2d-73.99105260129012!3d40.729484455065524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2599b8870e65f%3A0x4e5f60dcca7872b5!2s11%20St%20Marks%20Pl%2C%20New%20York%2C%20NY%2010003!5e0!3m2!1sen!2sus!4v1732446926492!5m2!1sen!2sus"
 							allowfullscreen=""
@@ -210,8 +213,9 @@
 									<header>
 										<h3><strong>We're on call 24/7</strong></h3>
 									</header>
-									<p id="overide-center">
-										<a href="tel:+19176931708">(917) 693-1708</a>
+									<p id="overide-center" class="row aln-center">
+										<span class="icon solid fa-phone"></span>
+										<a class="no-border" href="tel:+19176931708">(917) 693-1708</a>
 									</p>
 								</section>
 							</div>
@@ -220,7 +224,10 @@
 									<header>
 										<h3><strong>Hours of Operation</strong></h3>
 									</header>
-									<p id="overide-center">Mon-Fri 9:00 AM - 10:00 PM</p>
+									<div id="overide-center" class="row aln-center">
+										<span class="icon solid fa-clock"></span>
+										<p>Mon-Fri 9:00 AM - 10:00 PM</p>
+									</div>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrower">
@@ -228,8 +235,9 @@
 									<header>
 										<h3><strong>E-mail</strong></h3>
 									</header>
-									<p id="overide-center">
-										<a href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
+									<p id="overide-center" class="row aln-center">
+										<span class="icon solid fa-envelope"></span>
+										<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
 									</p>
 								</section>
 							</div>
@@ -271,8 +279,8 @@
 
 					<!-- Social -->
 					<ul class="icons">
-						<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
-						<li><a href="https://www.facebook.com/Gelmu2" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" target="_blank" rel="noopener noreferrer" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
+						<li><a href="https://www.facebook.com/Gelmu2" target="_blank" rel="noopener noreferrer" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 					<!-- Copyright -->
 					<ul class="copyright">
@@ -280,7 +288,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Build: Suwanshree Acharya</a></li>
+						<li>Design: <a class="no-border" href="http://html5up.net" target="_blank" rel="noopener noreferrer">HTML5 UP</a></li><li>Build: <a class="no-border" href="http://suwanshree.com" target="_blank" rel="noopener noreferrer">Suwanshree Acharya</a></li>
 					</ul>
 
 				</footer>
