Top nav color fix

--- a/404.html
+++ b/404.html
@@ -18,12 +18,12 @@
 	<body class="index is-preload">
         <!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="#">Home</a></li>
-							<li class="submenu">
-								<a href="#">Menu</a>
+					<h1 id="logo" class="black-color"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="current black-color"><a href="index.html">Home</a></li>
+						<li class="submenu">
+							<a href="#" class="black-color">Menu</a>
 								<ul>
 									<li><a href="no-sidebar.html">Services</a></li>
 									<li><a href="no-sidebar.html">Coverage Area</a></li>
