--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,12 @@
 
 			<!-- Header -->
 			<header id="header" class="alt">
-				<h1 id="logo"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<h1 id="logo" class="black-color"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li class="current black-color"><a href="index.html">Home</a></li>
 						<li class="submenu">
-							<a href="#">Menu</a>
+							<a href="#" class="black-color">Menu</a>
 							<ul>
 								<li><a href="no-sidebar.html">Services</a></li>
 								<li><a href="no-sidebar.html">Coverage Area</a></li>
