--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -189,7 +189,8 @@
 								</header>
 								<div id="overide-center" class="row aln-center">
 									<span class="icon solid fa-clock"></span>
-									<p>Mon-Fri 9:00 AM - 10:00 PM</p>
+									<p>Mon-Fri 8:00 AM - 9:00 PM
+									Sat-Sun 10:00 AM - 6:00 PM</p>
 								</div>
 							</section>
 						</div>
