Reviews page added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<li><a href="no-sidebar.html">Services</a></li>
 									<li><a href="no-sidebar.html">Coverage Area</a></li>
 									<li><a href="no-sidebar.html">Pricing</a></li>
-									<li><a href="no-sidebar.html">Reviews</a></li>
+									<li><a href="reviews.html">Reviews</a></li>
 									<li><a href="no-sidebar.html">Policies</a></li>
 									<li><a href="no-sidebar.html">About</a></li>
 									<li><a href="contact.html">Contact</a></li>
@@ -184,7 +184,7 @@
 					<span class="yelp-review" data-review-id="lqf-vZEJ28MZU4mQTHRunA" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=P2zvwiexkB3p0Y3y9q2LUA" rel="nofollow noopener">Lina B.</a>'s <a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=lqf-vZEJ28MZU4mQTHRunA" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/qiMZbeS05cZ3L92Y_mYEdQ" rel="nofollow noopener">Gelmu's Cleaning</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a></span>
 					<footer>
 						<ul class="buttons">
-							<li><a href="no-sidebar.html" class="button primary">Recent Reviews</a></li>
+							<li><a href="reviews.html" class="button primary">Recent Reviews</a></li>
 							<li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?override_cta=Get+pricing+%26+availability" class="button">Yelp Listing</a></li>
 						</ul>
 					</footer>
