--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -27,7 +27,7 @@
 								<li><a href="no-sidebar.html">Services</a></li>
 								<li><a href="no-sidebar.html">Coverage Area</a></li>
 								<li><a href="no-sidebar.html">Pricing</a></li>
-								<li><a href="no-sidebar.html">Reviews</a></li>
+								<li><a href="reviews.html">Reviews</a></li>
 								<li><a href="no-sidebar.html">Policies</a></li>
 								<li><a href="no-sidebar.html">About</a></li>
 								<li><a href="contact.html">Contact</a></li>
