--- a/404.html
+++ b/404.html
@@ -32,10 +32,10 @@
 									<li><a href="reviews.html">Reviews</a></li>
 									<li><a href="no-sidebar.html">Policies</a></li>
 									<li><a href="no-sidebar.html">About</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="/quote">Contact</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html" class="button primary">Request A Quote</a></li>
+							<li><a href="/quote" class="button primary">Request A Quote</a></li>
 						</ul>
 					</nav>
 				</header>
