--- a/contact/index.html
+++ b/contact/index.html
@@ -9,28 +9,28 @@
 		<title>Quote - Gelmu's Cleaning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/png" href="images/favicon.png">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="../images/favicon.png">
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="contact is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header" class="alt">
-				<h1 id="logo" class="black-color"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<h1 id="logo" class="black-color"><a href="../index.html">Gelmu's <span>Cleaning</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current black-color"><a href="index.html">Home</a></li>
+						<li class="current black-color"><a href="../index.html">Home</a></li>
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
 							<ul>
-								<li><a href="no-sidebar.html">Services</a></li>
-								<li><a href="no-sidebar.html">Coverage Area</a></li>
-								<li><a href="no-sidebar.html">Pricing</a></li>
-								<li><a href="reviews.html">Reviews</a></li>
-								<li><a href="no-sidebar.html">Policies</a></li>
-								<li><a href="no-sidebar.html">About</a></li>
+								<li><a href="../no-sidebar.html">Services</a></li>
+								<li><a href="../no-sidebar.html">Coverage Area</a></li>
+								<li><a href="../no-sidebar.html">Pricing</a></li>
+								<li><a href="../reviews.html">Reviews</a></li>
+								<li><a href="../no-sidebar.html">Policies</a></li>
+								<li><a href="../no-sidebar.html">About</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
 						</li>
@@ -164,15 +164,15 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollgress.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.scrollgress.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
