Routing refactor Polish

--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
     <head>
 		<title>Gelmu's Cleaning</title>
         <script>
-            // Redirect to index.html after 2 seconds
+            // Redirect to Home after 2 seconds
             setTimeout(function () {
-                window.location.href = "/index.html";
+                window.location.href = "/home";
             }, 2000);
         </script>
 		<meta charset="utf-8" />
@@ -19,17 +19,17 @@
 	<body class="index is-preload">
         <!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo" class="black-color"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+					<h1 id="logo" class="black-color"><a href="/home">Gelmu's <span>Cleaning</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current black-color"><a href="index.html">Home</a></li>
+						<li class="current black-color"><a href="/home">Home</a></li>
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
 								<ul>
 									<li><a href="no-sidebar.html">Services</a></li>
 									<li><a href="no-sidebar.html">Coverage Area</a></li>
 									<li><a href="no-sidebar.html">Pricing</a></li>
-									<li><a href="reviews.html">Reviews</a></li>
+									<li><a href="">Reviews</a></li>
 									<li><a href="no-sidebar.html">Policies</a></li>
 									<li><a href="no-sidebar.html">About</a></li>
 									<li><a href="/quote">Contact</a></li>
