--- a/home/index.html
+++ b/home/index.html
@@ -28,7 +28,7 @@
 									<li><a href="../no-sidebar.html">Services</a></li>
 									<li><a href="../no-sidebar.html">Coverage Area</a></li>
 									<li><a href="../no-sidebar.html">Pricing</a></li>
-									<li><a href="../reviews.html">Reviews</a></li>
+									<li><a href="../reviews">Reviews</a></li>
 									<li><a href="../no-sidebar.html">Policies</a></li>
 									<li><a href="../no-sidebar.html">About</a></li>
 									<li><a href="#footer" class="scrolly">Contact</a></li>
