--- a/quote/index.html
+++ b/quote/index.html
@@ -18,17 +18,17 @@
 
 			<!-- Header -->
 			<header id="header" class="alt">
-				<h1 id="logo" class="black-color"><a href="../index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<h1 id="logo" class="black-color"><a href="../home">Gelmu's <span>Cleaning</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current black-color"><a href="../index.html">Home</a></li>
+						<li class="current black-color"><a href="../home">Home</a></li>
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
 							<ul>
 								<li><a href="../no-sidebar.html">Services</a></li>
 								<li><a href="../no-sidebar.html">Coverage Area</a></li>
 								<li><a href="../no-sidebar.html">Pricing</a></li>
-								<li><a href="../reviews.html">Reviews</a></li>
+								<li><a href="../reviews">Reviews</a></li>
 								<li><a href="../no-sidebar.html">Policies</a></li>
 								<li><a href="../no-sidebar.html">About</a></li>
 								<li><a href="#">Contact</a></li>
