--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -18,23 +18,23 @@
 
 			<!-- Header -->
 			<header id="header" class="alt">
-				<h1 id="logo" class="black-color"><a href="index.html">Gelmu's <span>Cleaning</span></a></h1>
+				<h1 id="logo" class="black-color"><a href="/home">Gelmu's <span>Cleaning</span></a></h1>
 				<nav id="nav">
 					<ul>
-						<li class="current black-color"><a href="index.html">Home</a></li>
+						<li class="current black-color"><a href="/home">Home</a></li>
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
 							<ul>
 								<li><a href="no-sidebar.html">Services</a></li>
 								<li><a href="no-sidebar.html">Coverage Area</a></li>
 								<li><a href="no-sidebar.html">Pricing</a></li>
-								<li><a href="reviews.html">Reviews</a></li>
+								<li><a href="/reviews">Reviews</a></li>
 								<li><a href="no-sidebar.html">Policies</a></li>
 								<li><a href="no-sidebar.html">About</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="/quote">Contact</a></li>
 							</ul>
 						</li>
-						<li><a href="contact.html" class="button primary">Request A Quote</a></li>
+						<li><a href="/quote" class="button primary">Request A Quote</a></li>
 					</ul>
 				</nav>
 			</header>
