Restructure and specials page

--- a/home/index.html
+++ b/home/index.html
@@ -35,7 +35,7 @@
 								</ul>
 							</li>
 							<li class="specialSubmenu">
-								<a href="#">Special Offer</a>
+								<a href="../special">Special Offer</a>
 								<ul>
 									<li><a href="../no-sidebar.html">10% Off Any Service</a></li>
 								</ul>
