--- a/reviews/index.html
+++ b/reviews/index.html
@@ -31,7 +31,13 @@
 								<li><a href="#">Reviews</a></li>
 								<li><a href="../no-sidebar.html">Policies</a></li>
 								<li><a href="../no-sidebar.html">About</a></li>
-								<li><a href="../quote">Contact</a></li>
+								<li><a href="#footer" class="scrolly">Contact</a></li>
+							</ul>
+						</li>
+						<li class="specialSubmenu">
+							<a href="../special">Special Offer</a>
+							<ul>
+								<li><a href="../no-sidebar.html">10% Off Any Service</a></li>
 							</ul>
 						</li>
 						<li><a href="../quote" class="button primary">Request A Quote</a></li>
