--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
 									<li><a href="">Reviews</a></li>
 									<li><a href="no-sidebar.html">Policies</a></li>
 									<li><a href="no-sidebar.html">About</a></li>
-									<li><a href="/quote">Contact</a></li>
+									<li><a href="#footer" class="scrolly">Contact</a></li>
 								</ul>
 							</li>
 							<li><a href="/quote" class="button primary">Request A Quote</a></li>
