--- a/special/index.html
+++ b/special/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Quote - Gelmu's Cleaning</title>
+		<title>Special - Gelmu's Cleaning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/png" href="../images/favicon.png">
@@ -34,13 +34,7 @@
 								<li><a href="#footer" class="scrolly">Contact</a></li>
 							</ul>
 						</li>
-						<li class="specialSubmenu">
-							<a href="../special">Special Offer</a>
-							<ul>
-								<li><a href="../no-sidebar.html">10% Off Any Service</a></li>
-							</ul>
-						</li>
-						<li><a href="#" class="button primary">Request A Quote</a></li>
+						<li><a href="../quote" class="button primary">Request A Quote</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -49,18 +43,24 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-paper-plane"></span>
-						<h2>Quote Request</h2>
-						<p>Please submit the form below for us to get in touch with you!</p>
+						<span class="icon solid fa-trophy"></span>
+						<h2>Special Offer</h2>
+						<p>Check out our current <strong>Special Offers</strong> below!</p>
 					</header>
 
 					<!-- One -->
-						<section class="wrapper style4 special container medium">
-
-							<!-- Content -->
-							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgch82UOO7b3KaahCGcJwgw3ZpGS186QplWcKwGGwbZxUW_Q/viewform?embedded=true" width="100%" height="2240" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-						</section>
+					<section class="wrapper style2 container special">
+						<header>
+							<h2>10% Off all Services</h3>
+						</header>
+						<p><strong>Valid till December 2024.</strong></p>
+						<p>Mention offer while booking.</p>
+						<footer>
+							<ul class="buttons">
+								<li><a href="../quote" class="button small">Request a Quote</a></li>
+							</ul>
+						</footer>
+					</section>
 
 				</article>
 
