--- a/reviews/index.html
+++ b/reviews/index.html
@@ -37,7 +37,7 @@
 						<li class="specialSubmenu">
 							<a href="../special" class="black-color">Special Offer</a>
 							<ul>
-								<li><a href="../no-sidebar.html">10% Off Any Service</a></li>
+								<li><a href="../special">10% Off Any Service</a></li>
 							</ul>
 						</li>
 						<li><a href="../quote" class="button primary">Request A Quote</a></li>
