All pages layout

--- a/404.html
+++ b/404.html
@@ -25,15 +25,15 @@
 						<li class="current black-color"><a href="/home">Home</a></li>
 						<li class="submenu">
 							<a href="#" class="black-color">Menu</a>
-								<ul>
-									<li><a href="no-sidebar.html">Services</a></li>
-									<li><a href="no-sidebar.html">Coverage Area</a></li>
-									<li><a href="no-sidebar.html">Pricing</a></li>
-									<li><a href="">Reviews</a></li>
-									<li><a href="no-sidebar.html">Policies</a></li>
-									<li><a href="no-sidebar.html">About</a></li>
-									<li><a href="#footer" class="scrolly">Contact</a></li>
-								</ul>
+                            <ul>
+								<li><a href="../services">Services</a></li>
+								<li><a href="../coverage">Coverage Area</a></li>
+								<li><a href="../pricing">Pricing</a></li>
+								<li><a href="../reviews">Reviews</a></li>
+								<li><a href="../policies">Policies</a></li>
+								<li><a href="../about">About</a></li>
+								<li><a href="#footer" class="scrolly">Contact</a></li>
+							</ul>
 							</li>
 							<li><a href="/quote" class="button primary">Request A Quote</a></li>
 						</ul>
