--- a/home/index.html
+++ b/home/index.html
@@ -25,12 +25,12 @@
 							<li class="submenu">
 								<a href="#">Menu</a>
 								<ul>
-									<li><a href="../no-sidebar.html">Services</a></li>
-									<li><a href="../no-sidebar.html">Coverage Area</a></li>
-									<li><a href="../no-sidebar.html">Pricing</a></li>
+									<li><a href="../services">Services</a></li>
+									<li><a href="../coverage">Coverage Area</a></li>
+									<li><a href="../pricing">Pricing</a></li>
 									<li><a href="../reviews">Reviews</a></li>
-									<li><a href="../no-sidebar.html">Policies</a></li>
-									<li><a href="../no-sidebar.html">About</a></li>
+									<li><a href="../policies">Policies</a></li>
+									<li><a href="../about">About</a></li>
 									<li><a href="#footer" class="scrolly">Contact</a></li>
 								</ul>
 							</li>
