--- a/policies/index.html
+++ b/policies/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Special - Gelmu's Cleaning</title>
+		<title>Policies - Gelmu's Cleaning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/png" href="../images/favicon.png">
@@ -29,9 +29,15 @@
 								<li><a href="../coverage">Coverage Area</a></li>
 								<li><a href="../pricing">Pricing</a></li>
 								<li><a href="../reviews">Reviews</a></li>
-								<li><a href="../policies">Policies</a></li>
+								<li><a href="#">Policies</a></li>
 								<li><a href="../about">About</a></li>
 								<li><a href="#footer" class="scrolly">Contact</a></li>
+							</ul>
+						</li>
+						<li class="specialSubmenu">
+							<a href="../special" class="black-color">Special Offer</a>
+							<ul>
+								<li><a href="../special">10% Off Any Service</a></li>
 							</ul>
 						</li>
 						<li><a href="../quote" class="button primary">Request A Quote</a></li>
@@ -43,18 +49,17 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-trophy"></span>
-						<h2>Special Offer</h2>
-						<p>Check out our current <strong>Special Offers</strong> below!</p>
+						<span class="icon solid fa-file"></span>
+						<h2>Our Policies</h2>
+						<p>Please review our <strong>Policies</strong> listed below.</p>
 					</header>
 
 					<!-- One -->
-					<section class="wrapper style2 container special">
+					<section class="wrapper style4 container special">
 						<header>
-							<h2>10% Off all Services</h3>
+							<h2>Title</h3>
 						</header>
-						<p><strong>Valid till December 2024.</strong></p>
-						<p>Mention offer while booking.</p>
+						<p>Paragraph</p>
 						<footer>
 							<ul class="buttons">
 								<li><a href="../quote" class="button small">Request a Quote</a></li>
