--- a/policies/index.html
+++ b/policies/index.html
@@ -56,10 +56,12 @@
 
 					<!-- One -->
 					<section class="wrapper style4 container special">
-						<header>
-							<h2>Title</h3>
-						</header>
-						<p>Paragraph</p>
+						<ol id="overide-left-align">
+							<li>We will re-clean your home free of charge if you notify us within 24 hours that our work was unsatisfactory. Claims made later than 24 hours are subject to approval.</li>
+							<li>For security purposes, and to ensure optimal quality of work, our cleaning crew will consist of two or more people in your home.</li>
+							<li>We recommend certain cleaning products, but will work with your product preferences. It is up to you to determine and provide the products that we use. If not, we will buy what we consider the appropriate products for your cleaning needs. We generally charge for these supplies at cost, but please keep in mind that we are not a shopping service. If necessary, in our discretion, the amount we charge may include a factor for our time. If you see this as an issue, let’s discuss up front so we can reach an amicable understanding.</li>
+							<li>Initially, if you do not have a vacuum cleaner, we will bring one, but we request that you make your own available for subsequent cleanings.</li>
+						</ol>
 						<footer>
 							<ul class="buttons">
 								<li><a href="../quote" class="button small">Request a Quote</a></li>
