--- a/about/index.html
+++ b/about/index.html
@@ -51,20 +51,94 @@
 					<header class="special container">
 						<span class="icon solid fa-heart"></span>
 						<h2>About Us</h2>
-						<p>Learn more about <strong>Gelmu's Cleaning.</strong></p>
+						<p>We love New York City and are proud to be part of what makes it shine! For decades, customers have praised and remained loyal to <strong>Gelmu’s Cleaning</strong> for their weekly, bi-weekly, and monthly needs.</p>
 					</header>
 
 					<!-- One -->
-					<section class="wrapper style4 container special">
-						<header>
-							<h2>Title</h3>
+					<section class="wrapper style3 container special">
+
+						<header class="major">
+							<h2>Experience the <strong>difference</strong></h2>
 						</header>
-						<p>Paragraph</p>
-						<footer>
+
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu5.jpg" alt="" /></p>
+									<header>
+										<h3>Customer Satisfaction</h3>
+									</header>
+									<p>Our dedication to exceptional quality and customer satisfaction is so strong that some clients voluntarily pay more than our asking price. Their generosity allows us to maintain high standards while still offering competitive rates.</p>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu1.jpg" alt="" /></p>
+									<header>
+										<h3>Qualified Cleaners</h3>
+									</header>
+									<p>We never send an unqualified cleaner alone. If a cleaner doesn’t meet our standards, they assist a lead cleaner, regardless of their prior experience elsewhere.</p>
+								</section>
+
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu6.jpg" alt="" /></p>
+									<header>
+										<h3>Quality Cleaning</h3>
+									</header>
+									<p>Gelmu's Cleaning is a family-owned housekeeping team that takes pride in providing excellent service in New York City. Our customers have trusted us as their weekly, bi-weekly, or monthly home/apartment cleaners for years.</p>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu2.jpg" alt="" /></p>
+									<header>
+										<h3>Reasonable Prices</h3>
+									</header>
+									<p>Our flat rates include the estimated cleaning time plus an additional 30 minutes as a contingency. Most clients don’t incur extra charges; only a few pay more for significant additional work.</p>
+								</section>
+
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu3.jpg" alt="" /></p>
+									<header>
+										<h3>Realistic Cleaning Timelines</h3>
+									</header>
+									<p>Our estimated cleaning times are highly realistic. Thanks to thorough training and years of field experience, our cleaners consistently deliver top-notch quality within the allotted time.</p>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu4.jpg" alt="" /></p>
+									<header>
+										<h3>Trusted by Generations</h3>
+									</header>
+									<p>Families across New York City have trusted Gelmu’s Cleaning for decades. Our reputation is built on reliability, consistency, and a personal touch that makes every cleaning feel like a step towards a better home.</p>
+								</section>
+
+							</div>
+						</div>
+						<footer class="major">
 							<ul class="buttons">
-								<li><a href="../quote" class="button small">Request a Quote</a></li>
+								<li><a href="../quote" class="button">Request A Quote</a></li>
 							</ul>
 						</footer>
+
 					</section>
 
 				</article>
