--- a/services/index.html
+++ b/services/index.html
@@ -51,7 +51,7 @@
 					<header class="special container">
 						<span class="icon solid fa-check-circle"></span>
 						<h2>Our Services</h2>
-						<p>Browse through our <strong>Services</strong> listed below.</p>
+						<p>Browse through our <strong>Cleaning Services</strong> listed below.</p>
 					</header>
 
 					<!-- One -->
