--- a/special/index.html
+++ b/special/index.html
@@ -53,8 +53,8 @@
 						<header>
 							<h2>10% Off all Services</h3>
 						</header>
-						<p><strong>Valid till December 2024.</strong></p>
-						<p>Mention offer while booking.</p>
+						<p id="overide-center"><strong>Valid till December 2024.</strong></p>
+						<p id="overide-center">Mention offer while booking.</p>
 						<footer>
 							<ul class="buttons">
 								<li><a href="../quote" class="button small">Request a Quote</a></li>
