Pricing and Services update

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -57,9 +57,11 @@
 					<!-- One -->
 					<section class="wrapper style4 container special">
 						<header>
-							<h2>Title</h3>
+							<h2>Pricing Policy</h3>
 						</header>
-						<p>Paragraph</p>
+						<p>Pricing is broken down by <strong>Unit Type</strong> below, each unit type having different <strong>Rates</strong> & <strong>Time requirements</strong> for each service.</p>
+						<p id="overide-left-align"><strong>First Time Standard / First Time Deep:</strong> If needed, we'll add 30 minutes at no additional charge. Beyond that, we charge $10 for each extra 15 minutes.</p>
+						<p id="overide-left-align"><strong>Weekly / Bi-Weekly / Monthly:</strong> 15-minute grace period included. If there's consistent excess work, we can discuss adjusting the rate.</p>
 						<footer>
 							<ul class="buttons">
 								<li><a href="../quote" class="button small">Request a Quote</a></li>
