--- a/services/index.html
+++ b/services/index.html
@@ -55,16 +55,55 @@
 					</header>
 
 					<!-- One -->
-					<section class="wrapper style4 container special">
-						<header>
-							<h2>Title</h3>
-						</header>
-						<p>Paragraph</p>
-						<footer>
+					<section class="wrapper style3 container special">
+
+						<div class="row">
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu1.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Standard Cleaning</strong></h3>
+									</header>
+									<p id="overide-left-align">Standard cleaning involves routine tasks to maintain basic cleanliness in a home or office. These tasks include:</p>
+									<ul id="overide-left-align">
+										<li>Dusting surfaces</li>
+										<li>Vacuuming or sweeping floors</li>
+										<li>Mopping hard floors</li>
+										<li>Cleaning bathrooms</li>
+										<li>Wiping down kitchen surfaces</li>
+										<li>Emptying trash</li>
+										<li>Tidying up</li>
+									</ul>
+								</section>
+
+							</div>
+							<div class="col-6 col-12-narrower">
+
+								<section>
+									<p href="#" class="image featured"><img src="../images/gelmu6.jpg" alt="" /></p>
+									<header>
+										<h3><strong>Deep Cleaning</strong></h3>
+									</header>
+									<p id="overide-left-align">Deep cleaning is a more thorough cleaning process aimed at eliminating dirt, grime, and other build-up that isn't typically addressed during a standard cleaning. This is usually done less frequently and includes:</p>
+									<ul id="overide-left-align">
+										<li><strong>Detailed Dusting:</strong> Cleaning hard-to-reach areas such as vents, ceiling fans, and light fixtures. Please note, the client will need to provide a ladder for dusting high ceilings fans and light fixtures.</li>
+										<li><strong>Deep Scrubbing:</strong> Removing grime from kitchen appliances (inside the oven and microwave), bathroom tiles, and grout.</li>
+										<li><strong>Furniture Cleaning:</strong> Cleaning upholstery and underneath furniture.</li>
+										<li><strong>Baseboards and Doors:</strong> Washing baseboards, doors, and door frames.</li>
+										<li><strong>Windows:</strong> Cleaning interior windows and sturdy blinds (excluding fragile or old blinds).</li>
+										<li><strong>Cabinets and Drawers:</strong> Cleaning the interiors of kitchen and bathroom cabinets and drawers.</li>
+									</ul>
+								</section>
+
+							</div>
+						</div>
+						<footer class="major">
 							<ul class="buttons">
-								<li><a href="../quote" class="button small">Request a Quote</a></li>
+								<li><a href="../quote" class="button">Request A Quote</a></li>
 							</ul>
 						</footer>
+
 					</section>
 
 				</article>
